--- a/about.html
+++ b/about.html
@@ -5,11 +5,8 @@ description: I am ziyi
 background: '/img/bg-about.jpg'
 ---
 
-## About Me
-## study 
-## Work
-<p> </p>
 
-<p></p>
+{% capture tmp %}{% include tmp.md %}{% endcapture %}
+{{ tmp | markdownify }}
 
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+
