--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,12 @@
 ---
 layout: page
 title: Contact Me
-description: Have questions? I have answers.
+description: Get in touch with me
 background: '/img/bg-contact.jpg'
 form: true
 ---
 
+<!-- 
 <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
 <form name="sentMessage" id="contactForm" novalidate>
   <div class="control-group">
@@ -41,4 +42,4 @@ form: true
   <div class="form-group">
     <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
   </div>
-</form>
+</form> -->
