Add the basic version of self intro

--- a/about.html
+++ b/about.html
@@ -1,12 +1,12 @@
 ---
 layout: page
 title: About Me
-description: I am ziyi
+description: 
 background: '/img/bg-about.jpg'
 ---
 
 
-{% capture tmp %}{% include tmp.md %}{% endcapture %}
+{% capture tmp %}{% include about.md %}{% endcapture %}
 {{ tmp | markdownify }}
 
 
