update image in post

--- a/_posts/2024-01-26-bev.html
+++ b/_posts/2024-01-26-bev.html
@@ -3,7 +3,7 @@ layout: post
 title: "BEV"
 subtitle: "A roboust image view percetion method"
 date: 2020-01-26 23:45:13 -0400
-background: '/img/posts/bev.jpg'
+background: '/img/posts/BEV.png'
 ---
 
 {% capture tmp %}{% include post_md/robust_cam_view_bev.md %}{% endcapture %}
