change to relateive path

--- a/_posts/2024-01-27-Mulit-View_3d_human_Key_Point_Detection.html
+++ b/_posts/2024-01-27-Mulit-View_3d_human_Key_Point_Detection.html
@@ -9,5 +9,5 @@ background: '/assets/posts/ai_for_football.png'
 {{ tmp | markdownify }}
 
 <div class="col-sm mt-0 mt-md-0">
-    {% include video.html path="/assets/posts/bev_compressed.mp4" position="center"  %}
+    {% include video.html path="../../../assets/posts/bev_compressed.mp4" position="center"  %}
 </div>
