Change posts date

--- a/_posts/2024-01-26-bev.html
+++ b/_posts/2024-01-26-bev.html
@@ -2,7 +2,8 @@
 layout: post
 title: "BEV"
 subtitle: "A roboust image view percetion method"
-date: 2020-01-26 23:45:13 -0400
+author: "Ziyi"
+date: 2023-12-26 23:45:13 -0400
 background: '/assets/posts/BEV.png'
 ---
 
