--- a/_posts/2024-01-27-Mulit-View_3d_human_Key_Point_Detection.html
+++ b/_posts/2024-01-27-Mulit-View_3d_human_Key_Point_Detection.html
@@ -1,7 +1,8 @@
 ---
 layout: post
 title: "Mulit-View 3d human Key Point Detection"
-date: 2020-01-27 23:45:13 -0400
+author: "Ziyi"
+date: 2023-01-26 23:45:13 -0400
 background: '/assets/posts/ai_for_football.png'
 ---
 
