Finalize the content in the post

--- a/_posts/2024-01-26-bev.html
+++ b/_posts/2024-01-26-bev.html
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "BEV"
-subtitle: "A roboust image view percetion method"
+title: "Bird's-Eye View 3D Object Detection via Camera and LiDAR Fusion"
+subtitle: 
 author: "Ziyi"
 date: 2023-12-26 23:45:13 -0400
 background: '/assets/posts/BEV.png'
