--- a/_posts/2024-01-27-Multi-View_3D_Human__Pose_Estimation.html
+++ b/_posts/2024-01-27-Multi-View_3D_Human__Pose_Estimation.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Mulit-View 3d human Key Point Detection"
+title: "Multi-View 3D Human Pose Estimation"
 author: "Ziyi"
 date: 2023-01-26 23:45:13 -0400
 background: '/assets/posts/ai_for_football.png'
